--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
 </style>
 
 <body>
+<!-- HEADER SECTION -->
     <header>
-
+        <h1>M C</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#aboutme">About</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
+<!-- HERO SECTION -->
+    
+    
 
     <main>
 
