added HTML and CSS code for HERO section for main title part of page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,25 @@
     </header>
 
 <!-- HERO SECTION -->
+<div class="heroSection">
+    <div class="heroWrapper">
+        <div class="columnLeft">
+            <h1>Hi, I'm Madeleine and I'm an aspiring web developer and coder.</h1>
+        </div>
+    </div>
+</div>
     
-    
+<!-- MAIN -->
 
-    <main>
+<!-- ABOUT SECTION -->
+<main>
+    <section>
+
+    </section>
+
+
+
+
 
     </main>
 
