--- a/index.html
+++ b/index.html
@@ -8,54 +8,153 @@
 </head>
 
 <style>
+    /* universal selector */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color:black
+}
+
+body {
+  background-color: white;
+}
+
+
+  
+
+/* color of header is same as background with very minor padding */
+header {
+  background-color: white;
+  width: 100%;
+  padding: 15px 0;
+  position: fixed;
+  top: 0;
+}
+
+/* main title properties */
+h1 {
+  display:inline-block;
+  font-size: 15px;
+  color: black;
+  margin-left: 15px;
+  padding-top: 10px;
+}
+  
+nav {
+  float: right;
+  font-size: 15px;
+  padding-top: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+}
+  
+ul {
+  list-style-type: none;
+}
+  
+nav ul li {
+  display: inline-block;
+  margin-left: 25px;
+  margin-right: 15px;
+}
+  
+a{
+  color: black;
+  text-decoration: none;
+}
+  
+a:hover {
+  color:black;
+  text-decoration: underline;
+}
+
+/* all h2 in webpage are this font with a margin underneath */
+h2 {
+  font-size: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+
+
+/* HERO SECTION */
+.heroSection {
+  background-image: url("./assets/Images/bauhaus1.png");
+  background-size:cover;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 0 60px;
+}
+
+.heroWrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 820px;
+}
+
+ .columnLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.columnLeft h2 {
+    text-align: left;
+}
+
+/* MEDIA QUERIES FOR HERO */
+@media screen and (max-width: 480px) {
+    .heroWrapper {
+        grid-template-rows: 400px;
+    }
+
+    .columnLeft h2 {
+        font-size: 20px;
+    }
+}
+
+
+ 
+
 
 </style>
 
-<body>
-<!-- HEADER SECTION -->
-    <header>
-        <h1>M C</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#aboutme">About</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
+<body>
+
+<!--HEADER SECTION -->
+<header>
+    <h1>M C</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="#about">ABOUT</a>
+            </li>
+            <li>
+                <a href="#work">MY WORK</a>
+            </li>
+            <li>
+                <a href="#contact">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main>
 <!-- HERO SECTION -->
+<section>
 <div class="heroSection">
     <div class="heroWrapper">
         <div class="columnLeft">
-            <h1>Hi, I'm Madeleine and I'm an aspiring web developer and coder.</h1>
+            <h2>Hi, I'm Madeleine and I am an aspiring web developer and coder.</h2>
         </div>
     </div>
-</div>
-    
-<!-- MAIN -->
-
+</div>   
+</section>
 <!-- ABOUT SECTION -->
-<main>
-    <section>
-
-    </section>
-
-
-
-
-
-    </main>
-
-    <footer>
-
-    </footer>
 </body>
 
 </html>
