--- a/index.html
+++ b/index.html
@@ -4,122 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>madeleine portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/CSS/styles.css">
 </head>
 
 <style>
-    /* universal selector */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  color:black
-}
-
-body {
-  background-color: white;
-}
-
-
-  
-
-/* color of header is same as background with very minor padding */
-header {
-  background-color: white;
-  width: 100%;
-  padding: 15px 0;
-  position: fixed;
-  top: 0;
-}
-
-/* main title properties */
-h1 {
-  display:inline-block;
-  font-size: 15px;
-  color: black;
-  margin-left: 15px;
-  padding-top: 10px;
-}
-  
-nav {
-  float: right;
-  font-size: 15px;
-  padding-top: 5px;
-  margin-right: 5px;
-  margin-top: 5px;
-}
-  
-ul {
-  list-style-type: none;
-}
-  
-nav ul li {
-  display: inline-block;
-  margin-left: 25px;
-  margin-right: 15px;
-}
-  
-a{
-  color: black;
-  text-decoration: none;
-}
-  
-a:hover {
-  color:black;
-  text-decoration: underline;
-}
-
-/* all h2 in webpage are this font with a margin underneath */
-h2 {
-  font-size: 50px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-
-
-/* HERO SECTION */
-.heroSection {
-  background-image: url("./assets/Images/bauhaus1.png");
-  background-size:cover;
-  margin-left: 15px;
-  margin-right: 15px;
-  padding: 0 60px;
-}
-
-.heroWrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 820px;
-}
-
- .columnLeft {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: flex-start;
-}
-
-.columnLeft h2 {
-    text-align: left;
-}
-
-/* MEDIA QUERIES FOR HERO */
-@media screen and (max-width: 480px) {
-    .heroWrapper {
-        grid-template-rows: 400px;
-    }
-
-    .columnLeft h2 {
-        font-size: 20px;
-    }
-}
-
-
- 
-
+    
 
 </style>
 
@@ -155,6 +44,26 @@ h2 {
 </div>   
 </section>
 <!-- ABOUT SECTION -->
+<section>
+    <div id="about" class="aboutSection" >
+        <div class="aboutContainer">
+            <h2>ABOUT</h2>
+            <div class="aboutContent">
+                <div class="aboutText">
+                    <h3>Madeleine Cosway</h3>
+                    <p>For most of my twenties I have known what I have wanted to do with my life; travel! I spent a decade travelling all over the world from England and France to Canada and China. In 2018 after living in Melbourne for a couple of years, I made the big decision to move to the USA then back to England, to live out this goal of mine! Unfortunately, like most, I ended up in a months long strict lockdown, all alone in central Manchester. Making the most of my situation, I decided to teach myself basic Python coding and inadvertently found my passion! Upon moving back to Australia, I enrolled in a web development and coding bootcamp and made this portfolio to show my work. Outside of work, I am an avid reader, a pop culture nerd and love to collect records. If you have any enquiries, please feel free to contact me!</p>
+                </div>
+                <div class="aboutImage">
+                    <img src="./assets/Images/IMG_9197.jpeg" alt="placeholder image" class="aboutImg" />
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 </body>
 
 </html>
