added Work section HTML

--- a/index.html
+++ b/index.html
@@ -60,7 +60,23 @@
         </div>
     </div>
 </section>
-
+<!-- WORK SECTION -->
+<section>
+    <div id="work" class="workSection" >
+        <div class="workContainer">
+            <h2>MY WORK</h2>
+            <div class="workContent">
+                <div class="workText">
+                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing"><h3>Marketing Agency Mockup: Code Refactoring</h3></a>
+                    <p>In this project I was assigned to go over completed HTML/CSS code for a webpage. I was tasked with adding semantic elements, making sure the CSS structure was correct as well as giving the webpage a title that was a more concise description of what was included.</p>
+                </div>
+                <div class="workImage">
+                    <img height="300" width="600" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="workImg" />
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
