--- a/index.html
+++ b/index.html
@@ -77,9 +77,18 @@
         </div>
     </div>
 </section>
-
-
-
+<!-- CONTACT SECTION -->
+<section>
+    <div class="contact">
+        <div class="contactBar">
+            <p>Email Me:</p>
+                <span>madeleine.s.cosway@gmail.com</span>
+            <p>Github:</p>
+                <span>https://github.com/madeleinesc</span>
+        </div>
+        <h2>CONTACT ME</h2>
+    </div>
+</section>
+</main>
 </body>
-
 </html>
