added comments to CSS code

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="aboutContent">
                 <div class="aboutText">
                     <h3>Madeleine Cosway</h3>
-                    <p>For most of my twenties I have known what I have wanted to do with my life; travel! I spent a decade travelling all over the world from England and France to Canada and China. In 2018 after living in Melbourne for a couple of years, I made the big decision to move to the USA then back to England, to live out this goal of mine! Unfortunately, like most, I ended up in a months long strict lockdown, all alone in central Manchester. Making the most of my situation, I decided to teach myself basic Python coding and inadvertently found my passion! Upon moving back to Australia, I enrolled in a web development and coding bootcamp and made this portfolio to show my work. Outside of work, I am an avid reader, a pop culture nerd and love to collect records. If you have any enquiries, please feel free to contact me!</p>
+                    <p>When I turned 21 I thought I knew what I wanted to do with my life; TRAVEL! I spent a decade travelling all over the world from New Zealand and France to Canada and China. In 2018 after living in Melbourne for awhile, I made the big leap and moved to the USA then back to England, to live out this goal of mine! Unfortunately, like most, I ended up in a months long strict lockdown, all alone in central Manchester. Making the most of my situation, I decided to teach myself basic Python coding and inadvertently found my passion! Upon moving back to Australia, I enrolled in a web development and coding bootcamp and made this portfolio to show my work. Outside of work, I am an avid reader, a pop culture nerd and love to collect records. If you have any enquiries, please feel free to contact me!</p>
                 </div>
                 <div class="aboutImage">
                     <img src="./assets/Images/IMG_9197.jpeg" alt="placeholder image" class="aboutImg" />
@@ -67,11 +67,13 @@
             <h2>MY WORK</h2>
             <div class="workContent">
                 <div class="workText">
-                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing"><h3>Marketing Agency Mockup: Code Refactoring</h3></a>
+                    <h3>Marketing Agency Mockup: Code Refactoring</h3></a>
                     <p>In this project I was assigned to go over completed HTML/CSS code for a webpage. I was tasked with adding semantic elements, making sure the CSS structure was correct as well as giving the webpage a title that was a more concise description of what was included.</p>
                 </div>
                 <div class="workImage">
-                    <img height="300" width="600" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="workImg" />
+                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
+                        <img height="300" width="600" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="workImg" />
+                    </a>
                 </div>
             </div>
         </div>
