--- a/index.html
+++ b/index.html
@@ -66,15 +66,16 @@
         <div class="workContainer">
             <h2>MY WORK</h2>
             <div class="workContent">
+                <div class="mainworkImage">
+                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
+                        <img height="300" width="600" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="mainworkImg" />
+                    </a>
+                </div>
                 <div class="workText">
                     <h3>Marketing Agency Mockup: Code Refactoring</h3></a>
                     <p>In this project I was assigned to go over completed HTML/CSS code for a webpage. I was tasked with adding semantic elements, making sure the CSS structure was correct as well as giving the webpage a title that was a more concise description of what was included.</p>
                 </div>
-                <div class="workImage">
-                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
-                        <img height="300" width="600" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="workImg" />
-                    </a>
-                </div>
+                <h3>Other projects coming soon!</h3>
             </div>
         </div>
     </div>
