modified font sizing for all of webpage and added a more images in work section

--- a/index.html
+++ b/index.html
@@ -74,9 +74,19 @@
                 <div class="workText">
                     <h3>Marketing Agency Mockup: Code Refactoring</h3></a>
                     <p>In this project I was assigned to go over completed HTML/CSS code for a webpage. I was tasked with adding semantic elements, making sure the CSS structure was correct as well as giving the webpage a title that was a more concise description of what was included.</p>
-                    <h4>Other projects coming soon!</h4>
                 </div>
             </div>
+            <div class="workRow">
+                <div class="workColumn">
+                    <img height="250" width="400" src="assets/Images/cinema.png">
+                    <img height="250" width="400" src="assets/Images/aaron-burden-QJDzYT_K8Xg-unsplash.jpg">
+                </div>
+                <div class="workColumn">
+                    <img height="250" width="400" src="assets/Images/travis-yewell-F-B7kWlkxDQ-unsplash.jpg">
+                    <img height="250" width="400" src="./assets/Images/nathan-dumlao-I_394sxx0ec-unsplash.jpg">
+                </div>
+            </div>
+            <h4>Other projects coming soon!</h4>
         </div>
     </div>
 </section>
