--- a/index.html
+++ b/index.html
@@ -65,31 +65,29 @@
     <div id="work" class="workSection" >
         <div class="workContainer">
             <h2>MY WORK</h2>
-            <div class="workContent">
-                <div class="mainworkImage">
-                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
-                        <img height="300" width="600" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="mainworkImg" />
-                    </a>
-                </div>
-                <div class="workText">
-                    <h3>Marketing Agency Mockup: Code Refactoring</h3></a>
-                    <p>In this project I was assigned to go over completed HTML/CSS code for a webpage. I was tasked with adding semantic elements, making sure the CSS structure was correct as well as giving the webpage a title that was a more concise description of what was included.</p>
-                </div>
-            </div>
+            <p>Below is a sample of some of the work I have done so far. Click on an image to see!</p>
             <div class="workRow">
                 <div class="workColumn">
-                    <img height="250" width="400" src="assets/Images/cinema.png">
-                    <img height="250" width="400" src="assets/Images/aaron-burden-QJDzYT_K8Xg-unsplash.jpg">
+                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
+                        <img height="350" width="650" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="mainworkImg" />
+                    </a>
+                    <a href="">
+                        <img height="250" width="400" src="assets/Images/cinema.png"> 
+                     </a>
                 </div>
                 <div class="workColumn">
-                    <img height="250" width="400" src="assets/Images/travis-yewell-F-B7kWlkxDQ-unsplash.jpg">
-                    <img height="250" width="400" src="./assets/Images/nathan-dumlao-I_394sxx0ec-unsplash.jpg">
+                    <a href="">
+                       <img height="300" width="350" src="assets/Images/travis-yewell-F-B7kWlkxDQ-unsplash.jpg"> 
+                    </a>
+                    <a href="">
+                       <img height="300" width="600" src="./assets/Images/aaron-burden-QJDzYT_K8Xg-unsplash.jpg"> 
+                    </a>
                 </div>
             </div>
-            <h4>Other projects coming soon!</h4>
         </div>
     </div>
 </section>
+
 <!-- CONTACT SECTION -->
 <section>
     <div class="contact">
