added colored bars to seperate sections

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         </div>
     </div>
 </section>
+<!-- COLORED BAR -->
+<section>
+    <div class="coloredBar">
+</section>
 <!-- WORK SECTION -->
 <section>
     <div id="work" class="workSection" >
@@ -87,19 +91,12 @@
         </div>
     </div>
 </section>
-
-<!-- CONTACT SECTION -->
+<!-- COLORED BAR -->
 <section>
-    <div class="contact">
-        <div class="contactBar">
-            <p>Email Me:</p>
-                <span>madeleine.s.cosway@gmail.com</span>
-            <p>Github:</p>
-                <span>https://github.com/madeleinesc</span>
-        </div>
-        <h2>CONTACT ME</h2>
-    </div>
+    <div class="coloredBar">
 </section>
+<!-- CONTACT SECTION -->
+
 </main>
 </body>
 </html>
