added footer section with link icons

--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
             <div class="workRow">
                 <div class="workColumn">
                     <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
-                        <img height="350" width="650" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" class="mainworkImg" />
+                        <img height="350" width="650" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" />
                     </a>
                     <a href="">
-                        <img height="250" width="400" src="assets/Images/cinema.png"> 
-                     </a>
+                        <img height="250" width="400" src="assets/Images/cinema.png" alt="placeholder image of cinema"> 
+                    </a>
                 </div>
                 <div class="workColumn">
                     <a href="">
-                       <img height="300" width="350" src="assets/Images/travis-yewell-F-B7kWlkxDQ-unsplash.jpg"> 
+                       <img height="300" width="350" src="assets/Images/travis-yewell-F-B7kWlkxDQ-unsplash.jpg" alt="placeholder image of records"> 
                     </a>
                     <a href="">
-                       <img height="300" width="600" src="./assets/Images/aaron-burden-QJDzYT_K8Xg-unsplash.jpg"> 
+                       <img height="300" width="600" src="./assets/Images/aaron-burden-QJDzYT_K8Xg-unsplash.jpg" alt="placeholder image of books"> 
                     </a>
                 </div>
             </div>
@@ -97,6 +97,21 @@
 </section>
 <!-- CONTACT SECTION -->
 
+<!-- FOOTER -->
+<footer class="pagefooter">
+    <ul class="footerlist">
+        <li class="footerlistitem">
+            <a href="https://github.com/madeleinesc">
+                <img height="50" width="50" src="assets/Images/githubIcon.png" alt="github">
+            </a>
+        </li>
+        <li class="footerlistitem">
+            <a href="https://linkedin.com/in/madeleine-cosway-40027521b">
+                <img height="50" width="50" src="assets/Images/linkedinIcon.png" alt="LinkedIn">
+            </a>
+        </li>
+    </ul>
+</footer>
 </main>
 </body>
 </html>
