added HTML and CSS for contact section and modified it

--- a/index.html
+++ b/index.html
@@ -96,7 +96,38 @@
     <div class="coloredBar">
 </section>
 <!-- CONTACT SECTION -->
-
+<section>
+    <div id="contact" class="contactSection">
+        <h2>CONTACT</h2>
+            <div class="container">
+                <div style="text-align:center">
+                    <p>Please contact me for any enquiries:</p>
+                </div>
+                <div class="row">
+                <div class="column">
+                    <img src="./assets/Images/madeleineinliverpool.jpeg" style="width:100%">
+                </div>
+                 <div class="column">
+                    <form action="/action_page.php">
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                        <label for="country">Country</label>
+                        <select id="country" name="country">
+                            <option value="australia">Australia</option>
+                            <option value="canada">Canada</option>
+                            <option value="usa">USA</option>
+                        </select>
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- FOOTER -->
 <footer class="pagefooter">
     <ul class="footerlist">
