updated work first project link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>Below is a sample of some of the work I have done so far. Click on an image to see!</p>
             <div class="workRow">
                 <div class="workColumn">
-                    <a href="https://madeleinesc.github.io/marketing-agency-mockup-wk1/#social-media-marketing">
+                    <a href="https://github.com/madeleinesc/marketing-agency-mockup-wk1">
                         <img height="350" width="650" src="./assets/Images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="two workers using laptops" />
                     </a>
                     <a href="">
